[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/SetShip.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ShipSlots.gd" type="Script" id=2]
[ext_resource path="res://Images/UI/grid8.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Screens/Grid.gd" type="Script" id=4]
[ext_resource path="res://Fonts/test_font.tres" type="DynamicFont" id=5]

[node name="SetShip" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )

[node name="ShipSlots" type="Panel" parent="."]
self_modulate = Color( 0.105882, 0.0156863, 0.0156863, 1 )
margin_left = -839.896
margin_top = -304.49
margin_right = -299.896
margin_bottom = 286.51
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="ShipSlots"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Ship1" type="Panel" parent="ShipSlots/VBoxContainer"]
margin_left = 30.0
margin_top = 9.0
margin_right = 510.0
margin_bottom = 105.0
rect_min_size = Vector2( 480, 96 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Ship2" type="Panel" parent="ShipSlots/VBoxContainer"]
margin_left = 30.0
margin_top = 128.0
margin_right = 510.0
margin_bottom = 224.0
rect_min_size = Vector2( 480, 96 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Ship3" type="Panel" parent="ShipSlots/VBoxContainer"]
margin_left = 30.0
margin_top = 247.0
margin_right = 510.0
margin_bottom = 343.0
rect_min_size = Vector2( 480, 96 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Ship4" type="Panel" parent="ShipSlots/VBoxContainer"]
margin_left = 30.0
margin_top = 366.0
margin_right = 510.0
margin_bottom = 462.0
rect_min_size = Vector2( 480, 96 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Ship5" type="Panel" parent="ShipSlots/VBoxContainer"]
margin_left = 30.0
margin_top = 485.0
margin_right = 510.0
margin_bottom = 581.0
rect_min_size = Vector2( 480, 96 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Grid" type="TextureRect" parent="."]
margin_left = 112.926
margin_top = -451.92
margin_right = 880.926
margin_bottom = 316.08
texture = ExtResource( 3 )
stretch_mode = 3
script = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
margin_left = -335.253
margin_top = 360.76
margin_right = 71.7465
margin_bottom = 487.76
custom_fonts/font = ExtResource( 5 )
text = "Confirm"

[node name="Nickname" type="LineEdit" parent="."]
margin_left = -550.0
margin_top = -467.0
margin_right = 19.0
margin_bottom = -371.0
custom_fonts/font = ExtResource( 5 )

[node name="NicknameHead" type="Label" parent="."]
margin_left = -909.136
margin_top = -458.44
margin_right = -580.136
margin_bottom = -377.44
custom_fonts/font = ExtResource( 5 )
text = "Nickname"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
